# burgundy

./: .gitignore  Cargo.toml
burgundy_derive/: Cargo.toml
burgundy_derive/src/: lib.rs
burgundy_lib/: Cargo.toml
burgundy_lib/src/: error.rs  lib.rs  method.rs  path.rs  request.rs  request_information.rs
burgundy_lib/src/native_client/: string_stream.rs
examples/: github.rs
src/: burgandy_to_hyper.rs  domain.rs  error.rs  lib.rs  method.rs  native_client.rs  path.rs  query_builder.rs  request_information.rs  response.rs
src/native_client/: mod.rs  string_stream.rs
src/request_information/: headers.rs  mod.rs  query_builder.rs
tests/: burgundy_derive.rs  url_builder.rs
