[package]
name = "burgundy"
version = "0.2.3"
authors = ["joseph.lenton@askattest.com <joseph.lenton@askattest.com>"]
description = "Library for building API service bindings"
repository = "https://github.com/JosephLenton/burgundy"
license = "MIT"

[dependencies]
futures = { version = "0.1.23", default-features = false }
http = "0.1.7"
hyper = "0.12.6"
hyper-tls = "0.3.0"
tokio = "0.1.7"
failure = "0.1.1"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
