[package]
name = "burgundy"
version = "0.2.3"
authors = ["joseph.lenton@askattest.com <joseph.lenton@askattest.com>"]
description = "Library for building API service bindings"
repository = "https://github.com/JosephLenton/burgundy"
license = "MIT"
publish = true

[dependencies]
burgundy_derive = { path = "./burgundy_derive" }
burgundy_lib = { path = "./burgundy_lib" }
