[package]
name = "burgundy"
version = "0.3.2"
authors = ["joseph.lenton@askattest.com <joseph.lenton@askattest.com>"]
description = "Library for building API service bindings"
repository = "https://github.com/JosephLenton/burgundy"
license = "MIT"

[dependencies]
futures = { path = "../futures-rs" }
http = "0.1.13"
hyper = { path = "../hyper" }
hyper-tls = { path = "../hyper-tls/" }
tokio = { path = "../tokio" }
failure = "0.1.3"
serde = "1.0.80"
serde_json = "1.0.32"
log = "0.4.6"
serde_urlencoded = "0.5.3"

[dev-dependencies]
serde_derive = "1.0.70"
