[package]
name = "burgundy_lib"
version = "0.1.0"
authors = ["joseph.lenton@askattest.com <joseph.lenton@askattest.com>"]
description = "Library for building API service bindings"
repository = "https://github.com/JosephLenton/burgundy"
license = "MIT"
publish = true

[dependencies]
custom_derive = "0.1.7"
enum_derive = "0.1.7"
futures = { version = "0.1.23", default-features = false }
http = "0.1.7"
hyper = "0.12.6"
hyper-tls = "0.3.0"
tokio = "0.1.7"
failure = "0.1.1"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
